feat: add Rawline font files and define @font-face rules in globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,3 +122,121 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-100.ttf');
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-200.ttf');
+    font-weight: 200;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-300.ttf');
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-400.ttf');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-500.ttf');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-600.ttf');
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-700.ttf');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-800.ttf');
+    font-weight: 800;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-900.ttf');
+    font-weight: 900;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-100i.ttf');
+    font-weight: 100;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-200i.ttf');
+    font-weight: 200;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-300i.ttf');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-400i.ttf');
+    font-weight: 400;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-500i.ttf');
+    font-weight: 500;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-600i.ttf');
+    font-weight: 600;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-700i.ttf');
+    font-weight: 700;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-800i.ttf');
+    font-weight: 800;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Rawline';
+    src: url('/font/rawline-900i.ttf');
+    font-weight: 900;
+    font-style: italic;
+}
